Refactor: Organize project files into appropriate directories
- Move PowerShell scripts to scripts/powershell directory
- Move Docker configuration files to config/docker directory
- Move configuration files to config directory
- Move non-essential Markdown files to docs directory
- Create documentation for PowerShell scripts and Docker configurations
- Update file paths in Docker configuration files
- Update references to scripts in documentation files
- Add file organization guide

--- a/docs/安全指南.md
+++ b/docs/安全指南.md
@@ -82,11 +82,11 @@ This document provides security-related guidelines and best practices for the pr
 ## 安全工具
 ## Security Tools
 
-1. **Git 歷史清理**：使用 `clean_git_history.ps1` 腳本清理 Git 歷史中的敏感資訊。
-   **Git history cleaning**: Use the `clean_git_history.ps1` script to clean sensitive information from Git history.
+1. **Git 歷史清理**：使用 `scripts/powershell/clean_git_history.ps1` 腳本清理 Git 歷史中的敏感資訊。
+   **Git history cleaning**: Use the `scripts/powershell/clean_git_history.ps1` script to clean sensitive information from Git history.
 
-2. **環境設置**：使用 `setup_clean_env.ps1` 腳本設置乾淨的環境。
-   **Environment setup**: Use the `setup_clean_env.ps1` script to set up a clean environment.
+2. **環境設置**：使用 `scripts/powershell/setup_clean_env.ps1` 腳本設置乾淨的環境。
+   **Environment setup**: Use the `scripts/powershell/setup_clean_env.ps1` script to set up a clean environment.
 
 3. **安全掃描**：定期使用安全掃描工具，如 GitGuardian、Snyk 等，檢查代碼中的安全問題。
    **Security scanning**: Regularly use security scanning tools such as GitGuardian, Snyk, etc. to check for security issues in the code.
